--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <!-- collapse on toggle button click -->
         <div class="collapse">
             <ul class="navbar-nav">
-                <a href="" class="nav-link active">Home</a>
-                <a href="" class="nav-link">About me</a>
-                <a href="" class="nav-link">My work</a>
-                <a href="" class="nav-link">Contact</a>
+                <a href="#hero" class="nav-link active">Home</a>
+                <a href="#about" class="nav-link">About me</a>
+                <a href="#work" class="nav-link">My work</a>
+                <a href="#contact" class="nav-link">Contact</a>
             </ul>            
         </div>
         <!-- collapse on toggle button click -->
@@ -57,7 +57,7 @@
             </div>
         </div>
     </section>
-    <section id="about-me">
+    <section id="about">
         <h1>About Me</h1>
         <div class="about-me-container container">
             <div class="img-container">
@@ -74,13 +74,13 @@
         </div>
         
     </section>
-    <section id="my-work">
+    <section id="work">
         <div class="my-work ">
             <div class="filter">
                 <h2 class="sub-heading">Work</h2>
                 <ul class="filter-items">
                     <li class="filter-item">
-                        <button class="btn active">All</button>
+                        <button class="btn active-work">All</button>
                     </li>
                     <li class="filter-item">
                         <button class="btn">Java script</button>
