added active class on scroll

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
     </nav>
     </header>
-    <section id="hero">
+    <section class="section" id="hero">
         <div class="img-container">
 
             <img src="./img/pexels-christina-morillo-1181312.jpg" alt="">
@@ -57,7 +57,7 @@
             </div>
         </div>
     </section>
-    <section id="about">
+    <section class="section" id="about">
         <h1>About Me</h1>
         <div class="about-me-container container">
             <div class="img-container">
@@ -74,7 +74,7 @@
         </div>
         
     </section>
-    <section id="work">
+    <section class="section" id="work">
         <div class="my-work ">
             <div class="filter">
                 <h2 class="sub-heading">Work</h2>
@@ -162,7 +162,7 @@
             </div>
         </div>
     </section>
-    <section id="contact">
+    <section class="section" id="contact">
         <h1>Contact Me</h1>
         <div class="contact-container">
             <div class="contacts-info">
