typewriter effect added with java script in my name

--- a/index.html
+++ b/index.html
@@ -47,13 +47,17 @@
         </div>
         <div class="details">
             <h3>Hello I am</h3>
-            <h1>Nahid Hossain</h1>
+            <h1 class="title"></h1>
             <h4>Frontend web developer</h4>
             <div class="skills">
                 <i class="fa-brands fa-html5"></i>
                 <i class="fa-brands fa-css3-alt"></i>
                 <i class="fa-brands fa-sass"></i>
                 <i class="fa-brands fa-square-js"></i>
+            </div>
+            <div class="btn-container">
+
+                <button class="btn">Download CV</button>
             </div>
         </div>
     </section>
